[gd_scene load_steps=11 format=3 uid="uid://csrox2qetweqf"]

[ext_resource type="Script" path="res://src/game/scp/017/17.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://d1ccxjmbvfbdo" path="res://textures/scp/scp-017.png" id="2"]
[ext_resource type="Script" path="res://src/game/hud/debug_showhide.gd" id="3"]
[ext_resource type="Script" path="res://src/game/scp/raycast.gd" id="4"]
[ext_resource type="Script" path="res://src/game/scp/kill.gd" id="5"]
[ext_resource type="Script" path="res://src/game/scp/017/17_sounds.gd" id="6"]

[sub_resource type="ParticleProcessMaterial" id="1"]
emission_shape = 1
emission_sphere_radius = 6.0
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 0.0
color = Color(0.0431373, 0.0431373, 0.0431373, 0.470588)

[sub_resource type="CircleShape2D" id="2"]
radius = 1.0

[sub_resource type="CircleShape2D" id="3"]
radius = 250.0

[sub_resource type="CircleShape2D" id="4"]
radius = 6.0

[node name="SCP-017" type="CharacterBody2D" groups=["Save"]]
script = ExtResource("1")

[node name="ShadowEffect" type="GPUParticles2D" parent="."]
amount = 32
process_material = SubResource("1")
texture = ExtResource("2")
lifetime = 2.0
randomness = 1.0

[node name="CollisionShape3D" type="CollisionShape2D" parent="."]
shape = SubResource("2")

[node name="DebugPathfinding" type="Line2D" parent="."]
visible = false
width = 2.0
default_color = Color(1, 0.984314, 0, 1)
script = ExtResource("3")

[node name="RayCastTarget" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
script = ExtResource("4")

[node name="RayCastArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape2D" parent="RayCastArea"]
shape = SubResource("3")

[node name="KillArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false
script = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource("4")

[node name="Sounds" type="AudioStreamPlayer2D" parent="."]
volume_db = -12.0
max_distance = 150.0
bus = &"Sound"
script = ExtResource("6")

[node name="Timer" type="Timer" parent="Sounds"]
one_shot = true
autostart = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="RayCastArea" to="RayCastTarget" method="_on_RayCastArea_body_entered"]
[connection signal="body_exited" from="RayCastArea" to="RayCastTarget" method="_on_RayCastArea_body_exited"]
[connection signal="body_entered" from="KillArea" to="KillArea" method="_on_KillArea_body_entered"]
[connection signal="timeout" from="Sounds/Timer" to="Sounds" method="_on_Timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
